force-app/main/default/objects/RTV_Program__c/RTV_Program__c.object-meta.xml
<CustomObject>
    <description>Sales Return to Vendor Program</description>
    <label>RTV Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RTV Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>