force-app/main/default/objects/RTV_Program__c/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <description>Actual Amount (Without VAT)</description>
    <inlineHelpText>Actual Amount (Without VAT)</inlineHelpText>
    <label>Actual Amount (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>