force-app/main/default/objects/RTV_Program__c/fields/Application_POS_QTY__c.field-meta.xml
<CustomField>
    <fullName>Application_POS_QTY__c</fullName>
    <description>POS申请数量</description>
    <inlineHelpText>POS申请数量</inlineHelpText>
    <label>Application POS QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>