force-app/main/default/objects/RTV_Program__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>