force-app/main/default/objects/RTV_Program__c/fields/Budget_Amount_NET__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount_NET__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Summary Budget &apos;s $NET</inlineHelpText>
    <label>Budget Amount (USD/excl.VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>