force-app/main/default/objects/RTV_Program__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>&quot;USD&quot;</defaultValue>
    <label>Currency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>