force-app/main/default/objects/RTV_Program__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Return method(discount% on return)</description>
    <inlineHelpText>Return method(discount% on return)</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>