force-app/main/default/objects/RTV_Program__c/fields/DTC_Rebuy__c.field-meta.xml
<CustomField>
    <fullName>DTC_Rebuy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>dtc场合，rebuy默认未选择</description>
    <label>Rebuy</label>
    <type>Checkbox</type>
</CustomField>