force-app/main/default/objects/RTV_Program__c/fields/DTC_Type__c.field-meta.xml
<CustomField>
    <fullName>DTC_Type__c</fullName>
    <formula>IF(RecordType.Name == &apos;CFS DTC Takeback&apos; || RecordType.Name == &apos;CFS DTC Takeback Kick Off&apos;, &apos;CFS&apos;,
IF(RecordType.Name == &apos;Digital DTC Takeback&apos; || RecordType.Name == &apos;Digital DTC Takeback Kick Off&apos;, &apos;Digital&apos;,
&apos;&apos;))</formula>
    <inlineHelpText>DTC客户类型</inlineHelpText>
    <label>DTC Type</label>
    <type>Text</type>
</CustomField>