force-app/main/default/objects/RTV_Program__c/fields/ExRate__c.field-meta.xml
<CustomField>
    <fullName>ExRate__c</fullName>
    <defaultValue>$Setup.ConverseRMS__c.ExRate__c</defaultValue>
    <description>汇率</description>
    <label>ExRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>