force-app/main/default/objects/RTV_Program__c/fields/Finance_Code__c.field-meta.xml
<CustomField>
    <fullName>Finance_Code__c</fullName>
    <description>Code(Code(Finance Only))</description>
    <label>Finance Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>