force-app/main/default/objects/RTV_Program__c/fields/Has_Global_Sku_Budget__c.field-meta.xml
<CustomField>
    <fullName>Has_Global_Sku_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>是否有全局的（只指定MaterialCode的）商品预算？</inlineHelpText>
    <label>Has Global Sku Budget</label>
    <type>Checkbox</type>
</CustomField>