force-app/main/default/objects/RTV_Program__c/fields/IsCFS__c.field-meta.xml
<CustomField>
    <fullName>IsCFS__c</fullName>
    <description>判断Program是否是CFS</description>
    <formula>IF(
  RecordType.Name = &apos;CFS DTC Takeback&apos; ||
  RecordType.Name = &apos;CFS DTC Takeback Kick Off&apos;,
  True,
  False
)</formula>
    <label>IsCFS</label>
    <type>Checkbox</type>
</CustomField>