force-app/main/default/objects/RTV_Program__c/fields/IsDTC__c.field-meta.xml
<CustomField>
    <fullName>IsDTC__c</fullName>
    <description>判断Program是否是DTC</description>
    <formula>IF(
  RecordType.Name = &apos;CFS DTC Takeback&apos; ||
  RecordType.Name = &apos;CFS DTC Takeback Kick Off&apos; ||
  RecordType.Name = &apos;Digital DTC Takeback&apos; ||
  RecordType.Name = &apos;Digital DTC Takeback Kick Off&apos;,
  True,
  False
)</formula>
    <label>IsDTC</label>
    <type>Checkbox</type>
</CustomField>