force-app/main/default/objects/RTV_Program__c/fields/IsGold__c.field-meta.xml
<CustomField>
    <fullName>IsGold__c</fullName>
    <formula>IF(
 RecordType.Name = &apos;WSL Gold Store&apos; ||
 RecordType.Name = &apos;WSL Gold Store Off Policy&apos;,
 True,
 False
)</formula>
    <inlineHelpText>是否是&apos;金店&apos;?</inlineHelpText>
    <label>IsGold</label>
    <type>Checkbox</type>
</CustomField>