force-app/main/default/objects/RTV_Program__c/fields/Mechanism__c.field-meta.xml
<CustomField>
    <fullName>Mechanism__c</fullName>
    <label>Mechanism</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>