force-app/main/default/objects/RTV_Program__c/fields/Program_Period__c.field-meta.xml
<CustomField>
    <fullName>Program_Period__c</fullName>
    <label>Program Period</label>
    <length>30</length>
    <type>Text</type>
</CustomField>