force-app/main/default/objects/RTV_Program__c/fields/Program_Rate__c.field-meta.xml
<CustomField>
    <fullName>Program_Rate__c</fullName>
    <label>Program Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>