force-app/main/default/objects/RTV_Program__c/fields/Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Program_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Off Policy</fullName>
            </value>
            <value>
                <fullName>Kick Off</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>