force-app/main/default/objects/RTV_Program__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <defaultValue>(&quot;Take Back Program&quot;)</defaultValue>
    <description>Return program type</description>
    <label>Program Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>