force-app/main/default/objects/RTV_Program__c/fields/Rebuy__c.field-meta.xml
<CustomField>
    <fullName>Rebuy__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rebuy</label>
    <type>Checkbox</type>
</CustomField>