force-app/main/default/objects/RTV_Program__c/fields/Request_by__c.field-meta.xml
<CustomField>
    <fullName>Request_by__c</fullName>
    <label>Requested by</label>
    <length>40</length>
    <type>Text</type>
</CustomField>