force-app/main/default/objects/RTV_Program__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Return_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>