force-app/main/default/objects/RTV_Program__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <defaultValue>$Setup.ConverseRMS__c.TaxRate__c</defaultValue>
    <description>税率</description>
    <label>TaxRate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>