force-app/main/default/objects/RTV_Program__c/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>原来的sku预算数量上，可以增加的buffer比例数，范围0~1，如0.1代表10% ，1代表100%，默认为0</description>
    <label>Tolerance</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>