force-app/main/default/objects/RTV_Program__c/recordTypes/CFS_DTC_Takeback.recordType-meta.xml
<RecordType>
    <fullName>CFS_DTC_Takeback</fullName>
    <active>true</active>
    <description>DTC Takeback</description>
    <label>CFS DTC Takeback</label>
</RecordType>