force-app/main/default/objects/RTV_Program__c/recordTypes/Digital_DTC_Takeback.recordType-meta.xml
<RecordType>
    <fullName>Digital_DTC_Takeback</fullName>
    <active>true</active>
    <description>DTC Takeback</description>
    <label>Digital DTC Takeback</label>
</RecordType>