force-app/main/default/objects/RTV_Program__c/recordTypes/Digital_DTC_Takeback_Kick_Off.recordType-meta.xml
<RecordType>
    <fullName>Digital_DTC_Takeback_Kick_Off</fullName>
    <active>true</active>
    <description>DTC Takeback Kick Off</description>
    <label>Digital DTC Takeback Kick Off</label>
</RecordType>