force-app/main/default/objects/RTV_Program__c/recordTypes/Discount_RP_Removed.recordType-meta.xml
<RecordType>
    <fullName>Discount_RP_Removed</fullName>
    <active>true</active>
    <label>Discount RP Removed</label>
</RecordType>