force-app/main/default/objects/RTV_Program__c/recordTypes/Full_RP_Romoved.recordType-meta.xml
<RecordType>
    <fullName>Full_RP_Romoved</fullName>
    <active>true</active>
    <label>Full RP Romoved</label>
</RecordType>