force-app/main/default/objects/RTV_Program__c/recordTypes/WSL_Discount_Takeback.recordType-meta.xml
<RecordType>
    <fullName>WSL_Discount_Takeback</fullName>
    <active>true</active>
    <description>非金店折扣召回</description>
    <label>WSL Discount Takeback</label>
</RecordType>