force-app/main/default/objects/RTV_Program__c/recordTypes/WSL_Discourt_Takeback_Off_Policy.recordType-meta.xml
<RecordType>
    <fullName>WSL_Discourt_Takeback_Off_Policy</fullName>
    <active>true</active>
    <description>非金店折扣召回Off-Policy</description>
    <label>WSL Discount Takeback Off Policy</label>
</RecordType>