force-app/main/default/objects/RTV_Program__c/recordTypes/WSL_Full_Takeback.recordType-meta.xml
<RecordType>
    <fullName>WSL_Full_Takeback</fullName>
    <active>true</active>
    <description>非金店全价召回</description>
    <label>WSL Full Takeback</label>
</RecordType>