force-app/main/default/objects/RTV_Program__c/recordTypes/WSL_Full_Takeback_Off_Policy.recordType-meta.xml
<RecordType>
    <fullName>WSL_Full_Takeback_Off_Policy</fullName>
    <active>true</active>
    <description>非金店全价召回Off-Policy</description>
    <label>WSL Full Takeback Off Policy</label>
</RecordType>