force-app/main/default/objects/RTV_Program__c/recordTypes/WSL_Gold_Store.recordType-meta.xml
<RecordType>
    <fullName>WSL_Gold_Store</fullName>
    <active>true</active>
    <description>金店</description>
    <label>WSL Gold Store</label>
</RecordType>