force-app/main/default/objects/RTV_Program__c/recordTypes/WSL_Gold_Store_Off_Policy.recordType-meta.xml
<RecordType>
    <fullName>WSL_Gold_Store_Off_Policy</fullName>
    <active>true</active>
    <description>金店Off-Policy</description>
    <label>WSL Gold Store Off Policy</label>
</RecordType>