force-app/main/default/objects/RTV_Program__c/validationRules/ExpirationDateMustAfterToday.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpirationDateMustAfterToday</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
OR(
ISCHANGED(Expiration_Date__c),
ISNEW()
),
Expiration_Date__c &lt; Today()
)</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>The Expiration Date must not be earlier than today</errorMessage>
</ValidationRule>