force-app/main/default/objects/RTV_Program__c/validationRules/New_Status_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Status_Pending</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW() , Text(Program_Status__c ) != &apos;Pending&apos;)</errorConditionFormula>
    <errorDisplayField>Program_Status__c</errorDisplayField>
    <errorMessage>New program status is pending by default</errorMessage>
</ValidationRule>