force-app/main/default/objects/RTV_Program__c/validationRules/PR_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>PR_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(Program_Status__c) == &apos;Close&apos; ,
ISCHANGED( Expiration_Date__c )
 )</errorConditionFormula>
    <errorMessage>The current program status is close, field cannot be modified</errorMessage>
</ValidationRule>