force-app/main/default/objects/RTV_Program__c/validationRules/Program_Name_Max_22.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Name_Max_22</fullName>
    <active>false</active>
    <description>The Program Name can only have 22 characters at most</description>
    <errorConditionFormula>LEN(Name) &gt; 22</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Program Name can only have 22 characters at most</errorMessage>
</ValidationRule>