force-app/main/default/objects/RTV_Program__c/validationRules/Program_Name_Unchanged.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Name_Unchanged</fullName>
    <active>true</active>
    <description>Off Policy或remove之后，ProgramName不能更改</description>
    <errorConditionFormula>AND(
OR(RecordType.Name  == &apos;WSL Full Takeback Off Policy&apos;,
RecordType.Name  == &apos;WSL Discount Takeback Off Policy&apos;,
RecordType.Name  == &apos;WSL Gold Store Off Policy&apos;,
RecordType.Name  == &apos;Full RP Romoved&apos;,
RecordType.Name  == &apos;Discount RP Removed&apos;,
RecordType.Name  == &apos;CFS DTC Takeback Kick Off&apos;,
RecordType.Name  == &apos;Digital DTC Takeback Kick Off&apos;),
 ISCHANGED( Name ) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Program name cannot be changed</errorMessage>
</ValidationRule>