force-app/main/default/objects/RTV_Program__c/validationRules/ToleranceScope.validationRule-meta.xml
<ValidationRule>
    <fullName>ToleranceScope</fullName>
    <active>true</active>
    <description>0&lt;=X&lt;=1</description>
    <errorConditionFormula>Tolerance__c &gt; 1  || Tolerance__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Tolerance__c</errorDisplayField>
    <errorMessage>The tolerance value range must be greater than or equal to 0 or less than or equal to 1</errorMessage>
</ValidationRule>