force-app/main/default/objects/RTV_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Finance_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Program_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>